--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,23 +5,6 @@
          version="3.1">
 
     <servlet>
-<<<<<<< HEAD
-        <display-name>LoginController</display-name>
-        <servlet-name>LoginController</servlet-name>
-        <servlet-class>by.gsu.epamlab.controller.LoginController</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LoginController</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-    <welcome-file-list>
-        <welcome-file>login</welcome-file>
-    </welcome-file-list>
-    <error-page>
-        <exception-type>java.lang.Throwable</exception-type>
-        <location>/error.jsp</location>
-    </error-page>
-=======
         <display-name>Login</display-name>
         <servlet-name>Login</servlet-name>
         <servlet-class>by.gsu.epamlab.controller.LoginController</servlet-class>
@@ -60,6 +43,36 @@
         <url-pattern>/logout</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <display-name>addTask</display-name>
+        <servlet-name>addTask</servlet-name>
+        <servlet-class>by.gsu.epamlab.controller.AddTaskController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>addTask</servlet-name>
+        <url-pattern>/addTask</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <display-name>manageTask</display-name>
+        <servlet-name>manageTask</servlet-name>
+        <servlet-class>by.gsu.epamlab.controller.ManageTaskController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>manageTask</servlet-name>
+        <url-pattern>/manageTask</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <display-name>action</display-name>
+        <servlet-name>action</servlet-name>
+        <servlet-class>by.gsu.epamlab.controller.ActionTaskController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>action</servlet-name>
+        <url-pattern>/action</url-pattern>
+    </servlet-mapping>
+
 
     <welcome-file-list>
         <welcome-file>login</welcome-file>
@@ -68,5 +81,4 @@
         <!--<exception-type>java.lang.Throwable</exception-type>-->
         <!--<location>/error.jsp</location>-->
     <!--</error-page>-->
->>>>>>> origin/stage3
 </web-app>
