--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,16 @@
     </servlet-mapping>
 
     <servlet>
+        <display-name>editTask</display-name>
+        <servlet-name>editTask</servlet-name>
+        <servlet-class>by.gsu.epamlab.controller.EditTaskController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>editTask</servlet-name>
+        <url-pattern>/editTask</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <display-name>manageTask</display-name>
         <servlet-name>manageTask</servlet-name>
         <servlet-class>by.gsu.epamlab.controller.ManageTaskController</servlet-class>
@@ -73,7 +83,15 @@
         <url-pattern>/action</url-pattern>
     </servlet-mapping>
 
-
+    <!--<filter>-->
+        <!--<filter-name>LoginFilter</filter-name>-->
+        <!--<filter-class>by.gsu.epamlab.filters.UserValidationFilter</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>LoginFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
+    
     <welcome-file-list>
         <welcome-file>login</welcome-file>
     </welcome-file-list>
