доработано сохранение файла

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,11 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <context-param>
+        <param-name>filepath</param-name>
+        <param-value>d:\Projects\Java\EPAM_spring_2015\jeeProjectTasksUpload\</param-value>
+    </context-param>
+    
     <servlet>
         <display-name>Login</display-name>
         <servlet-name>Login</servlet-name>
@@ -83,6 +88,16 @@
         <url-pattern>/action</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <display-name>download</display-name>
+        <servlet-name>download</servlet-name>
+        <servlet-class>by.gsu.epamlab.controller.FileDownloadController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>download</servlet-name>
+        <url-pattern>/download</url-pattern>
+    </servlet-mapping>
+
     <filter>
         <filter-name>LoginFilter</filter-name>
         <filter-class>by.gsu.epamlab.filters.UserValidationFilter</filter-class>
@@ -106,6 +121,10 @@
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
         <servlet-name>Tasks</servlet-name>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>LoginFilter</filter-name>
+        <servlet-name>download</servlet-name>
     </filter-mapping>
 
     <welcome-file-list>
